# src/main/java/cz/cvut/fel/eduportal/submission/dto/SubmissionCreateDTO.java
@@ -1,0 +1,11 @@
+package cz.cvut.fel.eduportal.submission.dto;
+
+public record SubmissionCreateDTO(
+        Integer assignmentId,
+        String studentUsername,
+        String filePath,
+        String fileName,
+        String fileType,
+        Long fileSize
+) {
+}
