# src/main/java/cz/cvut/fel/eduportal/submission/dto/SubmissionResponseDTO.java
@@ -1,0 +1,17 @@
+package cz.cvut.fel.eduportal.submission.dto;
+
+import java.time.LocalDateTime;
+
+public record SubmissionResponseDTO(
+        Integer id,
+        Integer assignmentId,
+        String studentUsername,
+        String filePath,
+        String fileName,
+        String fileType,
+        Long fileSize,
+        LocalDateTime submissionTime,
+        double grade,
+        String feedback
+) {
+}
